# mmd

./: .gitignore  LICENSE  README.md  input.mmd  pyproject.toml
src/mmd/: cli.py  html.py  inline.py  parse.py
