[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmd"
version = "0.1.0"
description = 'A markdown flavor to preserve the look and feel of the source files'
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich",
    "typer",
]

[project.scripts]
mmd = "mmd.cli:main"